@@ -20,7 +20,7 @@ public:
   static bool has_interface (Grob *);
   DECLARE_SCHEME_CALLBACK (force_shift_callback, (SCM element));
   DECLARE_SCHEME_CALLBACK (calc_positioning_done, (SCM element));
-  DECLARE_SCHEME_CALLBACK (force_shift_callback_rest, (SCM element));
+  DECLARE_SCHEME_CALLBACK (force_shift_callback_rest, (SCM element, SCM off));
   static SCM do_shift (Grob *);
 };
 #endif // REST_COLLISION_HH
